--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "src/schemas/workexperince"],
   "exclude": ["node_modules"]
 }
